--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -46,6 +46,9 @@
             <th># Q</th>
             <th># R</th>
             <th># Completions</th>
+            <th>Avg</th>
+            <th><sup>max</sup>/<sub>min</sub></th>
+            <th>Efficiency</th>
         </tr>
         {% for t in task_info %}
         <tr>
@@ -54,6 +57,9 @@
             <td>{{ task_info[t]['num_queued'] }}</td>
             <td>{{ task_info[t]['num_running'] }}</td>
             <td>{{ task_info[t]['num_completions'] }}</td>
+            <td>{{ task_info[t]['avg_runtime'] }}</td>
+            <td><sup>{{ task_info[t]['max_runtime'] }}</sup>/<sub>{{ task_info[t]['min_runtime'] }}</sub></td>
+            <td>{{ task_info[t]['efficiency'] }}</td>
         </tr>
         {% end %}
     </table>
