rounding and other style guides

--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -46,8 +46,8 @@
             <th># Q</th>
             <th># R</th>
             <th># Completions</th>
-            <th>Avg</th>
-            <th><sup>max</sup>/<sub>min</sub></th>
+            <th>Avg (hours)</th>
+            <th><sup>max</sup>/<sub>min</sub> (hours)</th>
             <th>Efficiency</th>
         </tr>
         {% for t in task_info %}
@@ -59,7 +59,7 @@
             <td>{{ task_info[t]['num_completions'] }}</td>
             <td>{{ task_info[t]['avg_runtime'] }}</td>
             <td><sup>{{ task_info[t]['max_runtime'] }}</sup>/<sub>{{ task_info[t]['min_runtime'] }}</sub></td>
-            <td>{{ task_info[t]['efficiency'] }}</td>
+            <td class="align_right">{{ task_info[t]['efficiency'] }}%</td>
         </tr>
         {% end %}
     </table>
