--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -57,9 +57,9 @@
             <td>{{ task_info[t]['num_queued'] }}</td>
             <td>{{ task_info[t]['num_running'] }}</td>
             <td>{{ task_info[t]['num_completions'] }}</td>
-            <td>{{ '{:.2f}'.format(task_info[t]['avg_runtime']) }}</td>
-            <td><sup>{{ '{:0.2f}'.format(task_info[t]['max_runtime']) }}</sup>/<sub>{{ '{:0.2f}'.format(task_info[t]['min_runtime']) }}</sub></td>
-            <td>{{ '{:d}'.format(int(task_info[t]['efficiency']*100)) }}%</td>
+            <td>{{ '{:.2f}'.format(task_info[t]['avg_runtime']/3600) }}</td>
+            <td><sup>{{ '{:0.2f}'.format(task_info[t]['max_runtime']/3600) }}</sup>/<sub>{{ '{:0.2f}'.format(task_info[t]['min_runtime']/3600) }}</sub></td>
+            <td>{{ '{:d}'.format(int(task_info[t]['efficiency']*100/3600)) }}%</td>
         </tr>
         {% end %}
     </table>
