--- a/_modules/iceprod/server/dbmethods/queue.html
+++ b/_modules/iceprod/server/dbmethods/queue.html
@@ -712,7 +712,7 @@
                         <span class="n">status</span> <span class="o">=</span> <span class="n">tasks</span><span class="p">[</span><span class="n">task_id</span><span class="p">][</span><span class="s">&#39;status&#39;</span><span class="p">]</span>
                         <span class="k">if</span> <span class="p">(</span><span class="n">status</span> <span class="o">==</span> <span class="s">&#39;idle&#39;</span> <span class="ow">or</span>
                             <span class="p">((</span><span class="ow">not</span> <span class="n">global_queueing</span><span class="p">)</span> <span class="ow">and</span> <span class="n">status</span> <span class="o">==</span> <span class="s">&#39;waiting&#39;</span><span class="p">)):</span>
-                            <span class="n">reqs</span> <span class="o">=</span> <span class="k">None</span>
+                            <span class="n">reqs</span> <span class="o">=</span> <span class="s">&#39;&#39;</span>
                             <span class="k">if</span> <span class="n">reqs</span><span class="p">:</span>
                                 <span class="n">reqs</span> <span class="o">=</span> <span class="n">json_decode</span><span class="p">(</span><span class="n">reqs</span><span class="p">)</span>
                             <span class="k">elif</span> <span class="n">task_rel_ids</span><span class="p">[</span><span class="n">task_rel_id</span><span class="p">]:</span>
