--- a/_modules/iceprod/server/server.html
+++ b/_modules/iceprod/server/server.html
@@ -167,6 +167,9 @@
 
         <span class="n">set_log_level</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;logging&#39;</span><span class="p">][</span><span class="s">&#39;level&#39;</span><span class="p">])</span>
 
+        <span class="k">if</span> <span class="s">&#39;blocking_threshold&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;logging&#39;</span><span class="p">]:</span>
+            <span class="n">IOLoop</span><span class="o">.</span><span class="n">set_blocking_log_threshold</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;logging&#39;</span><span class="p">][</span><span class="s">&#39;blocking_threshold&#39;</span><span class="p">])</span>
+
         <span class="k">for</span> <span class="n">mod_name</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;modules&#39;</span><span class="p">]:</span>
             <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;modules&#39;</span><span class="p">][</span><span class="n">mod_name</span><span class="p">]:</span>
                 <span class="k">try</span><span class="p">:</span>
