--- a/_modules/iceprod/server/dbmethods/cron.html
+++ b/_modules/iceprod/server/dbmethods/cron.html
@@ -241,6 +241,66 @@
 
                 <span class="c"># TODO: consolidate dataset statistics</span>
 
+    <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
+<div class="viewcode-block" id="cron.cron_job_completion"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.cron.cron.cron_job_completion">[docs]</a>    <span class="k">def</span> <span class="nf">cron_job_completion</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Check for newly completed jobs and mark them as such&quot;&quot;&quot;</span>
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select dataset_id,jobs_submitted,tasks_submitted &#39;</span>
+        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39; from dataset where status = ? &#39;</span>
+        <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="s">&#39;processing&#39;</span><span class="p">,)</span>
+        <span class="n">ret</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
+        <span class="n">datasets</span> <span class="o">=</span> <span class="p">{}</span>
+        <span class="k">for</span> <span class="n">dataset_id</span><span class="p">,</span><span class="n">njobs</span><span class="p">,</span><span class="n">ntasks</span> <span class="ow">in</span> <span class="n">ret</span><span class="p">:</span>
+            <span class="n">datasets</span><span class="p">[</span><span class="n">dataset_id</span><span class="p">]</span> <span class="o">=</span> <span class="n">ntasks</span><span class="o">//</span><span class="n">njobs</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">datasets</span><span class="p">:</span>
+            <span class="k">return</span>
+
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select dataset_id, job_id, count(*) from search &#39;</span>
+        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39; where task_status = &quot;complete&quot; and dataset_id in (&#39;</span>
+        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;,&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">([</span><span class="s">&#39;?&#39;</span> <span class="k">for</span> <span class="n">_</span> <span class="ow">in</span> <span class="n">datasets</span><span class="p">])</span>
+        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;) group by job_id&#39;</span>
+        <span class="n">bindings</span> <span class="o">=</span> <span class="nb">tuple</span><span class="p">(</span><span class="n">datasets</span><span class="p">)</span>
+        <span class="n">ret</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
+
+        <span class="n">jobs</span> <span class="o">=</span> <span class="nb">set</span><span class="p">()</span>
+        <span class="k">for</span> <span class="n">dataset_id</span><span class="p">,</span><span class="n">job_id</span><span class="p">,</span><span class="n">num</span> <span class="ow">in</span> <span class="n">ret</span><span class="p">:</span>
+            <span class="k">if</span> <span class="n">datasets</span><span class="p">[</span><span class="n">dataset_id</span><span class="p">]</span> <span class="o">&lt;=</span> <span class="n">num</span><span class="p">:</span>
+                <span class="n">jobs</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">job_id</span><span class="p">)</span>
+
+        <span class="n">now</span> <span class="o">=</span> <span class="n">nowstr</span><span class="p">()</span>
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update job set status = &quot;complete&quot;, status_changed = ? &#39;</span>
+        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39; where job_id = ?&#39;</span>
+        <span class="k">for</span> <span class="n">job_id</span> <span class="ow">in</span> <span class="n">jobs</span><span class="p">:</span>
+            <span class="c"># update job status</span>
+            <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;job %s marked as complete&#39;</span><span class="p">,</span><span class="n">job_id</span><span class="p">)</span>
+            <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">now</span><span class="p">,</span><span class="n">job_id</span><span class="p">)</span>
+            <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
+            <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_is_master</span><span class="p">():</span>
+                <span class="n">sql3</span> <span class="o">=</span> <span class="s">&#39;replace into master_update_history (table_name,update_index,timestamp) values (?,?,?)&#39;</span>
+                <span class="n">bindings3</span> <span class="o">=</span> <span class="p">(</span><span class="s">&#39;job&#39;</span><span class="p">,</span><span class="n">job_id</span><span class="p">,</span><span class="n">now</span><span class="p">)</span>
+                <span class="k">try</span><span class="p">:</span>
+                    <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql3</span><span class="p">,</span> <span class="n">bindings3</span><span class="p">)</span>
+                <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
+                    <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error updating master_update_history&#39;</span><span class="p">,</span>
+                                <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
+            <span class="k">else</span><span class="p">:</span>
+                <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">_send_to_master</span><span class="p">((</span><span class="s">&#39;job&#39;</span><span class="p">,</span><span class="n">job_id</span><span class="p">,</span><span class="n">now</span><span class="p">,</span><span class="n">sql</span><span class="p">,</span><span class="n">bindings</span><span class="p">))</span>
+
+            <span class="c"># TODO: collate task stats</span>
+
+            <span class="c"># clean dagtemp</span>
+            <span class="k">if</span> <span class="s">&#39;site_temp&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;queue&#39;</span><span class="p">]:</span>
+                <span class="n">temp_dir</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;queue&#39;</span><span class="p">][</span><span class="s">&#39;site_temp&#39;</span><span class="p">]</span>
+                <span class="n">dataset</span> <span class="o">=</span> <span class="n">GlobalID</span><span class="o">.</span><span class="n">localID_ret</span><span class="p">(</span><span class="n">dataset_id</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="s">&#39;int&#39;</span><span class="p">)</span>
+                <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select job_index from job where job_id = ?&#39;</span>
+                <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">job_id</span><span class="p">,)</span>
+                <span class="k">try</span><span class="p">:</span>
+                    <span class="n">ret</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
+                    <span class="n">job</span> <span class="o">=</span> <span class="n">ret</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span>
+                    <span class="n">dagtemp</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">temp_dir</span><span class="p">,</span> <span class="n">dataset</span><span class="p">,</span> <span class="n">job</span><span class="p">)</span>
+                    <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;cleaning site_temp %r&#39;</span><span class="p">,</span> <span class="n">dagtemp</span><span class="p">)</span>
+                    <span class="n">functions</span><span class="o">.</span><span class="n">delete</span><span class="p">(</span><span class="n">dagtemp</span><span class="p">)</span>
+                <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
+                    <span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s">&#39;failed to clean site_temp&#39;</span><span class="p">,</span> <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="cron.cron_remove_old_passkeys"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.cron.cron.cron_remove_old_passkeys">[docs]</a>    <span class="k">def</span> <span class="nf">cron_remove_old_passkeys</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="n">now</span> <span class="o">=</span> <span class="n">nowstr</span><span class="p">()</span>
