--- a/_modules/iceprod/server/dbmethods.html
+++ b/_modules/iceprod/server/dbmethods.html
@@ -233,15 +233,12 @@
         <span class="k">else</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s">&#39;bad table type&#39;</span><span class="p">)</span>
 
-        <span class="n">ret</span> <span class="o">=</span> <span class="n">OrderedDict</span><span class="p">()</span>
         <span class="k">try</span><span class="p">:</span>
-            <span class="k">for</span> <span class="n">i</span><span class="p">,</span><span class="n">k</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">keys</span><span class="p">):</span>
-                <span class="n">ret</span><span class="p">[</span><span class="n">k</span><span class="p">]</span> <span class="o">=</span> <span class="n">input_row</span><span class="p">[</span><span class="n">i</span><span class="p">]</span>
+            <span class="k">return</span> <span class="n">OrderedDict</span><span class="p">(</span><span class="nb">zip</span><span class="p">(</span><span class="n">keys</span><span class="p">,</span><span class="n">input_row</span><span class="p">))</span>
         <span class="k">except</span><span class="p">:</span>
             <span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s">&#39;error making table %s dict from return values %r&#39;</span><span class="p">,</span>
                          <span class="n">table</span><span class="p">,</span><span class="n">input_row</span><span class="p">)</span>
             <span class="k">raise</span>
-        <span class="k">return</span> <span class="n">ret</span>
 
     <span class="k">def</span> <span class="nf">_bulk_select</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
