--- a/_modules/iceprod/server/modules/schedule.html
+++ b/_modules/iceprod/server/modules/schedule.html
@@ -188,10 +188,6 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">scheduler</span><span class="o">.</span><span class="n">schedule</span><span class="p">(</span><span class="s">&#39;every 1 hours&#39;</span><span class="p">,</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">modules</span><span class="p">[</span><span class="s">&#39;db&#39;</span><span class="p">][</span><span class="s">&#39;cron_dataset_completion&#39;</span><span class="p">])</span>
 
-        <span class="c"># mark jobs complete</span>
-        <span class="c">#self.scheduler.schedule(&#39;every 31 minutes&#39;,</span>
-        <span class="c">#        self.modules[&#39;db&#39;][&#39;cron_job_completion&#39;])</span>
-
         <span class="c"># collate node resources</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">scheduler</span><span class="o">.</span><span class="n">schedule</span><span class="p">(</span><span class="s">&#39;every 1 hours&#39;</span><span class="p">,</span>
                 <span class="n">partial</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">modules</span><span class="p">[</span><span class="s">&#39;db&#39;</span><span class="p">][</span><span class="s">&#39;node_collate_resources&#39;</span><span class="p">],</span>
@@ -214,7 +210,11 @@
                 <span class="bp">self</span><span class="o">.</span><span class="n">io_loop</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">executor</span><span class="p">]</span>
         <span class="n">master_grid</span> <span class="o">=</span> <span class="n">grid</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">)</span>
 
-        <span class="bp">self</span><span class="o">.</span><span class="n">scheduler</span><span class="o">.</span><span class="n">schedule</span><span class="p">(</span><span class="s">&#39;every 1 minutes&#39;</span><span class="p">,</span> <span class="n">master_grid</span><span class="o">.</span><span class="n">check_iceprod</span><span class="p">)</span></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">scheduler</span><span class="o">.</span><span class="n">schedule</span><span class="p">(</span><span class="s">&#39;every 1 minutes&#39;</span><span class="p">,</span> <span class="n">master_grid</span><span class="o">.</span><span class="n">check_iceprod</span><span class="p">)</span>
+
+        <span class="c"># mark jobs complete</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">scheduler</span><span class="o">.</span><span class="n">schedule</span><span class="p">(</span><span class="s">&#39;every 31 minutes&#39;</span><span class="p">,</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">modules</span><span class="p">[</span><span class="s">&#39;db&#39;</span><span class="p">][</span><span class="s">&#39;cron_job_completion&#39;</span><span class="p">])</span></div>
 
 </pre></div>
 
